--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,6 @@
 body {
     margin: 20px;
     background-color: #a3b18a;
-    /*
-    Challenge:
-    Find a web safe font you like, and add it 
-    to your card.
-    */
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -17,7 +12,7 @@ body {
 
 .card {
     width: 400px;
-    margin: 0 auto;
+    margin: 0 auto 0 0;
     padding: 20px;
     display: flex;
     justify-content: space-around;
@@ -26,28 +21,30 @@ body {
     color: #344e41;
     border-block: 8px solid #344e41;
     border-inline: 8px solid #588157;
-
-        
-    /*
-    Challenge:
-    Find a color palette you like on Coolors.co
-    and use it in your business card.
-     */
 }
 
 .border-blue {
     border: 1px dotted blue;
 }
+button{
+    margin-top:20px;
+    margin-left:-40px;
+    font-size:large;
+    font-weight: bold;
+    text-align: center;
+    background: #dad7cd;
+    color: #344e41;
+    border-block: 8px solid #344e41;
+    border-inline: 8px solid #588157;
+    height: 50px;
+    width:450px;
 
-/*
-Stretch goals:
-Find other ways you can personalize 
-the design of your business card, e.g.:
-- change the border(s)
-- add border radius
-- shuffle the layout
-- shadows        🤯
-- hover effects  🤯🤯
-- animations     🤯🤯🤯
-*/
-
+}
+button:hover {
+background-color: #78ffbb;
+transform: translateY(-3px);
+box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+ul{
+    list-style-type: none;
+}
